<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckgrGreen">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="cursive"
                android:text=""
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/pic"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_account" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/quote"
        android:layout_width="165dp"
        android:layout_height="113dp"
        android:fontFamily="cursive"
        android:text="@string/quote"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btnToDo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.16000003" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_banner_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnToDo"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_mainbtn"
        android:drawableRight="@drawable/ic_baseline_add_task_24"
        android:text="@string/toDo"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSchedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />


    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_mainbtn"
        android:drawableLeft="@drawable/ic_baseline_edit_calendar_24"
        android:text="@string/calendar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotes" />

    <Button
        android:id="@+id/btnNotes"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_mainbtn"
        android:drawableRight="@drawable/ic_baseline_create_24"
        android:text="@string/notes"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSchedule" />

    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_mainbtn"
        android:drawableLeft="@drawable/ic_baseline_event_note_24"
        android:text="@string/schedule"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToDo" />

</androidx.constraintlayout.widget.ConstraintLayout>